crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/overloaded_external_selected/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:16:9]
    │
 16 │         A.f(1);
    │         ───┬──  
    │            ╰──── Error occurred here.
────╯
